--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ slidebgcolor="#FFFFFF"
 //Specify the slider's images
 var leftrightslide=new Array()
 var finalslide=''
-leftrightslide[0]='<a href="http://digitalshorts.weebly.com/animated-figures.html"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/adventure.png" border=1></a>'
-leftrightslide[1]='<a href="http://digitalshorts.weebly.com/hollys.html"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/prank.png" border=1></a>'
-leftrightslide[2]='<a href="http://digitalshorts.weebly.com/joel.html"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/pivot.png" border=1></a>'
-leftrightslide[3]='<a href="http://digitalshorts.weebly.com/miscellaneous-works.html"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/works1.png" border=1></a>'
-leftrightslide[4]='<a href="http://digitalshorts.weebly.com/stop-motion-animation.html"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/normalday.png" border=1></a>'
+leftrightslide[0]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/history"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/adventure.png" border=1></a>'
+leftrightslide[1]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/business"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/prank.png" border=1></a>'
+leftrightslide[2]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/popularity"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/pivot.png" border=1></a>'
+leftrightslide[3]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/impact"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/works1.png" border=1></a>'
+leftrightslide[4]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/future"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/normalday.png" border=1></a>'
 leftrightslide[5]='<a href="http://digitalshorts.weebly.com/tim-anna-pieter--luan.html"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/walk.png" border=1></a>'
 //Specify gap between each image (use HTML):
 var imagegap=" "
