--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ slidebgcolor="#FFFFFF"
 //Specify the slider's images
 var leftrightslide=new Array()
 var finalslide=''
-leftrightslide[0]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/history"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/adventure.png" border=1></a>'
+leftrightslide[0]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/history"><img src="https://i.imgur.com/bFRMwW9.png" border=1></a>'
 leftrightslide[1]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/business"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/prank.png" border=1></a>'
 leftrightslide[2]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/popularity"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/pivot.png" border=1></a>'
 leftrightslide[3]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/impact"><img src="http://i1298.photobucket.com/albums/ag57/aismtech/works1.png" border=1></a>'
