--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ slidebgcolor="#FFFFFF"
 //Specify the slider's images
 var leftrightslide=new Array()
 var finalslide=''
-leftrightslide[0]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/history"><img src="https://i.imgur.com/J2rdcqd.png" border=1 alt="History"></a>'
+leftrightslide[0]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/history"><img src="https://i.imgur.com/D9mr1tc.png" border=1 alt="History"></a>'
 leftrightslide[1]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/business"><img src="https://i.imgur.com/J2rdcqd.png" border=1></a>'
 leftrightslide[2]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/popularity"><img src="https://i.imgur.com/J2rdcqd.png" border=1></a>'
 leftrightslide[3]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/impact"><img src="https://i.imgur.com/J2rdcqd.png" border=1></a>'
