--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ slidebgcolor="#FFFFFF"
 var leftrightslide=new Array()
 var finalslide=''
 leftrightslide[0]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/history"><img src="https://i.imgur.com/D9mr1tc.png" border=1 alt="History"></a>'
-leftrightslide[1]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/business"><img src="https://i.imgur.com/J2rdcqd.png" border=1></a>'
-leftrightslide[2]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/popularity"><img src="https://i.imgur.com/J2rdcqd.png" border=1></a>'
-leftrightslide[3]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/impact"><img src="https://i.imgur.com/J2rdcqd.png" border=1></a>'
-leftrightslide[4]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/future"><img src="https://i.imgur.com/J2rdcqd.png" border=1></a>'
-leftrightslide[5]='<a href="http://digitalshorts.weebly.com/tim-anna-pieter--luan.html"><img src="https://i.imgur.com/J2rdcqd.png" border=1></a>'
+leftrightslide[1]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/business"><img src="https://i.imgur.com/D9mr1tc.png" border=1></a>'
+leftrightslide[2]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/popularity"><img src="https://i.imgur.com/D9mr1tc.png" border=1></a>'
+leftrightslide[3]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/impact"><img src="https://i.imgur.com/D9mr1tc.png" border=1></a>'
+leftrightslide[4]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/future"><img src="https://i.imgur.com/D9mr1tc.png" border=1></a>'
+leftrightslide[5]='<a href="http://digitalshorts.weebly.com/tim-anna-pieter--luan.html"><img src="https://i.imgur.com/D9mr1tc.png.png" border=1></a>'
 //Specify gap between each image (use HTML):
 var imagegap=" "
 
