--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@ slidebgcolor="#FFFFFF"
 //Specify the slider's images
 var leftrightslide=new Array()
 var finalslide=''
-leftrightslide[0]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/history"><img src="https://i.imgur.com/UkdJnrP.png" border=1 alt="History"></a>'
-leftrightslide[1]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/business"><img src="https://i.imgur.com/UkdJnrP.png" border=1></a>'
-leftrightslide[2]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/popularity"><img src="https://i.imgur.com/UkdJnrP.png" border=1></a>'
-leftrightslide[3]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/impact"><img src="https://i.imgur.com/UkdJnrP.png" border=1></a>'
-leftrightslide[4]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/future"><img src="https://i.imgur.com/UkdJnrP.png" border=1></a>'
-leftrightslide[5]='<a href="http://digitalshorts.weebly.com/tim-anna-pieter--luan.html"><img src="https://i.imgur.com/UkdJnrP.png" border=1></a>'
+leftrightslide[0]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/history"><img src="https://i.imgur.com/aQK5fWh.png" border=1 alt="History"></a>'
+leftrightslide[1]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/business"><img src="https://i.imgur.com/OnNCTXr.png.png" border=1></a>'
+leftrightslide[2]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/popularity"><img src="https://i.imgur.com/1499QRZ.png" border=1></a>'
+leftrightslide[3]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/impact"><img src="https://i.imgur.com/Htp5jhs.png" border=1></a>'
+leftrightslide[4]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/future"><img src="https://i.imgur.com/7ZcoFz9.png" border=1></a>'
 //Specify gap between each image (use HTML):
 var imagegap=" "
 
