--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 
 /***********************************************
 * Conveyor belt slideshow script- © Dynamic Drive DHTML code library (www.dynamicdrive.com)
-* This notice MUST stay intact for legal use
-* Visit Dynamic Drive at http://www.dynamicdrive.com/ for full source code
 ***********************************************/
-
 
 //Specify the slider's width (in pixels)
 var sliderwidth="730px"
@@ -23,10 +20,10 @@ slidebgcolor="#FFFFFF"
 var leftrightslide=new Array()
 var finalslide=''
 leftrightslide[0]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/history"><img src="https://i.imgur.com/aQK5fWh.png" border=1 alt="History"></a>'
-leftrightslide[1]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/business"><img src="https://i.imgur.com/OnNCTXr.png.png" border=1></a>'
-leftrightslide[2]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/popularity"><img src="https://i.imgur.com/1499QRZ.png" border=1></a>'
-leftrightslide[3]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/impact"><img src="https://i.imgur.com/Htp5jhs.png" border=1></a>'
-leftrightslide[4]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/future"><img src="https://i.imgur.com/7ZcoFz9.png" border=1></a>'
+leftrightslide[1]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/business"><img src="https://i.imgur.com/OnNCTXr.png.png" border=1 alt="Business"></a>'
+leftrightslide[2]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/popularity"><img src="https://i.imgur.com/1499QRZ.png" border=1 alt="Popularity"></a>'
+leftrightslide[3]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/impact"><img src="https://i.imgur.com/Htp5jhs.png" border=1 alt="Impact"></a>'
+leftrightslide[4]='<a href="https://imcrisanto.github.io/mms142-groupd-2020/future"><img src="https://i.imgur.com/7ZcoFz9.png" border=1 alt="Future"></a>'
 //Specify gap between each image (use HTML):
 var imagegap=" "
 
